vivado/214/proj_extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/sol/sol.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [HLS 200-10] Setting target device to 'xc7k160t-fbg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
ERROR: [HLS 200-70] Cannot find any design unit to elaborate.
INFO: [HLS 200-10] Adding design file 'extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c' to the project
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c' ... 
WARNING: [HLS 200-40] extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:1:10: fatal error: 'HLS/hls.h' file not found
#include "HLS/hls.h"
         ^
1 error generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:1:
extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:28:1: error: unknown type name 'component'
component
^
extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:29:1: error: expected identifier or '('
int ixgbe_copy_dcb_cfg(struct ixgbe_adapter *adapter, int tc_max)
^
2 errors generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:1:
extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:33:33: error: use of undeclared identifier 'NULL'
 struct tc_configuration *src = NULL;
                                ^
extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:34:33: error: use of undeclared identifier 'NULL'
 struct tc_configuration *dst = NULL;
                                ^
2 errors generated.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:32 ; elapsed = 00:03:23 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 28018 ; free virtual = 39379
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:32 ; elapsed = 00:03:23 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 28018 ; free virtual = 39379
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:34 ; elapsed = 00:03:24 . Memory (MB): peak = 832.453 ; gain = 132.133 ; free physical = 28017 ; free virtual = 39378
INFO: [HLS 200-10] Checking synthesizability ...
ERROR: [SYNCHK 200-11] extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:30: Argument 'adapter.dcb_cfg.bw_percentage' of function 'ixgbe_copy_dcb_cfg' (extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:30) has an unsynthesizable type (possible cause(s): pointer to pointer or global pointer).
ERROR: [SYNCHK 200-61] extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:55: unsupported memory access on variable 'adapter.dcb_cfg.tc_config.path.prio_type' which is (or contains) an array with unknown size at compile time.
INFO: [SYNCHK 200-10] 2 error(s), 0 warning(s).
ERROR: [HLS 200-70] Synthesizability check failed.
INFO: [HLS 200-10] Creating and opening project '/home/vivado/HLStools/vivado/proj_extr_.linuxdriversttyserialsunzilog.c_sunzilog_convert_to_zs_with_main'.
INFO: [HLS 200-10] Adding design file 'extr_.linuxdriversttyserialsunzilog.c_sunzilog_convert_to_zs_with_main.c' to the project
INFO: [HLS 200-10] Creating and opening solution '/home/vivado/HLStools/vivado/proj_extr_.linuxdriversttyserialsunzilog.c_sunzilog_convert_to_zs_with_main/sol'.
